added new icons, made classes 4 in row

--- a/about-us.html
+++ b/about-us.html
@@ -16,7 +16,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
     <!-- Title-->
-    <title>M.Ali - Fitness and Gym HTML-5 Template</title>
+    <title>Smallville Athletics</title>
 </head>
 
 <body>
