--- a/index.html
+++ b/index.html
@@ -70,8 +70,8 @@
                     <div class="col-lg-12">
                         <div class="social-list">
                             <a href="#"><i class="fa fa-instagram"></i></a>
-                            <a href="#"><i class="fa fa-twitter"></i></a>
-                            <a href="#"><i class="fa fa-facebook"></i></a>
+                           
+                            <a href="https://www.facebook.com/smallvilleathletics/"><i class="fa fa-facebook"></i></a>
                         </div>
                     </div>
                 </div>
@@ -93,64 +93,85 @@
                 </div>
             </div>
             <div class="row d-flex justify-content-md-center  justify-content-sm-center">
-                <div class="col-lg-4 col-md-6 col-sm-6">
+
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="single-item-area-wrapper position-relative">
-                        <div class="overlay-feature-content d-flex align-items-center" data-background="https://images.unsplash.com/photo-1616279969722-d81a5a3944ef?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=727&q=80">
+                        <div class="overlay-feature-content d-flex align-items-center" data-background="https://images.unsplash.com/photo-1517838277536-f5f99be501cd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
                             <div class="overlay-feature-inner-content">
                                 <p class="mb-30">A 60 minute class designed to challenge your strength, speed, and overall fitness. Variety of Barbell, accessory, gymnastic, and cardio movements all wrapped in one.</p>
 
                                 <div class="site-btn feature-btn">
-                                    <a href="#" class="primary-btn btn filled-btn">learn more</a>
+                                    <a href="class.html" class="primary-btn btn filled-btn">learn more</a>
                                 </div>
 
                             </div>
                         </div>
                         <div class="single-feature-inner-content text-center">
                             <div class="single-feature-icon">
-                                <img src="assets/img/feature/gym.png" alt="Single Feature">
+                                <img src="assets/img/feature/dumbbell.png" alt="Single Feature">
                             </div>
-                            <h3 class="text-uppercase mt-40">Strength Class</h3>
+                            <h3 class="text-uppercase mt-40">Strength</h3>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-lg-3 col-md-6 col-sm-6">
+                    <div class="single-item-area-wrapper position-relative">
+                        <div class="overlay-feature-content d-flex align-items-center" data-background="https://images.unsplash.com/photo-1517838277536-f5f99be501cd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
+                            <div class="overlay-feature-inner-content">
+                                <p class="mb-30">A 60 minute class designed to challenge your strength, speed, and overall fitness. Variety of Barbell, accessory, gymnastic, and cardio movements all wrapped in one.</p>
+
+                                <div class="site-btn feature-btn">
+                                    <a href="class.html" class="primary-btn btn filled-btn">learn more</a>
+                                </div>
+
+                            </div>
+                        </div>
+                        <div class="single-feature-inner-content text-center">
+                            <div class="single-feature-icon">
+                                <img src="assets/img/feature/boot.png" alt="Single Feature">
+                            </div>
+                            <h3 class="text-uppercase mt-40">Bootcamp</h3>
                         </div>
                     </div>
                 </div>
 
-                <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="single-item-area-wrapper position-relative">
                         <div class="overlay-feature-content d-flex align-items-center" data-background="https://images.unsplash.com/photo-1616279969722-d81a5a3944ef?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=727&q=80">
                             <div class="overlay-feature-inner-content">
                                 <p class="mb-30">Hybrid Class designed to provide 45 minutes of barbell plus cardio, giving you the ultimate workout. Stamina is our goal!</p>
 
                                 <div class="site-btn feature-btn">
-                                    <a href="#" class="primary-btn btn filled-btn">learn more</a>
+                                    <a href="class.html" class="primary-btn btn filled-btn">learn more</a>
                                 </div>
 
                             </div>
                         </div>
                         <div class="single-feature-inner-content text-center">
                             <div class="single-feature-icon">
-                                <img src="assets/img/feature/gym.png" alt="Single Feature">
+                                <img src="assets/img/feature/car.png" alt="Single Feature">
                             </div>
-                            <h3 class="text-uppercase mt-40">Engine Class</h3>
+                            <h3 class="text-uppercase mt-40">Engine</h3>
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-4 col-md-6 col-sm-6">
+                <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="single-item-area-wrapper position-relative">
                         <div class="overlay-feature-content d-flex align-items-center" data-background="https://images.unsplash.com/photo-1519311965067-36d3e5f33d39?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80">
                             <div class="overlay-feature-inner-content">
                                 <p class="mb-30">45 Minute class with focus on core and cardio. Great for ALL levels of fitness! </p>
 
                                 <div class="site-btn feature-btn">
-                                    <a href="#" class="primary-btn btn filled-btn">learn more</a>
+                                    <a href="class.html" class="primary-btn btn filled-btn">learn more</a>
                                 </div>
 
                             </div>
                         </div>
                         <div class="single-feature-inner-content text-center">
                             <div class="single-feature-icon">
-                                <img src="assets/img/feature/Icon-2.png" alt="Single Feature">
+                                <img src="assets/img/feature/cardio.png" alt="Single Feature">
                             </div>
-                            <h3 class="text-uppercase mt-40">Sweat Class</h3>
+                            <h3 class="text-uppercase mt-40">Sweat</h3>
                         </div>
                     </div>
                 </div>
@@ -175,7 +196,7 @@
                             <p class="mb-30">At Smallville Athletics, located in Fort Scott Kansas for over 4 years, we are dedicated towards our mission of building a well balanced, healthy and fully capable community! </p>
                             <p class="mb-40"><strong>Move Well. Build Strength.</strong></p>
                             <div class="site-btn about-btn">
-                                <a href="#" class="primary-btn btn filled-btn text-uppercase">contact us</a>
+                                <a href="tel:123456789" class="primary-btn btn filled-btn text-uppercase">contact us</a>
                             </div>
                         </div>
 
@@ -1989,21 +2010,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6  col-sm-6">
-                        <div class="widget footer-widget">
-                            <h3 class="text-uppercase mb-20">Subscribe now</h3>
-                            <div class="subscribe-form">
-                                <form action="#">
-                                    <div class="form-group">
-                                        <input type="email" placeholder="Enter Email" required>
-                                    </div>
-                                    <div class="form-group">
-                                        <div class="site-btn about-btn why-btn banner-btn">
-                                            <button class="primary-btn btn filled-btn text-uppercase" type="submit">become a member</button>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
+                       
                     </div>
                 </div>
             </div>
