--- a/class.html
+++ b/class.html
@@ -77,7 +77,7 @@
                 <div class="col-lg-12  text-center mb-40">
                     <div class="section-title">
                         <h4 class="text-uppercase mb-20">our classes</h4>
-                        <h1 class="text-uppercase">our popular courses</h1>
+                        <h1 class="text-uppercase">our popular classes</h1>
                     </div>
                 </div>
             </div>
@@ -92,7 +92,7 @@
 
                         </div>
                         <div class="single-classes-inner-content">
-                            <h3 class="text-uppercase mb-30">Girls Stregnth</h3>
+                            <h3 class="text-uppercase mb-30">Strength</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu porta nisl. Donec consectetur ante.</p>
                         </div>
                     </div>
@@ -107,7 +107,7 @@
 
                         </div>
                         <div class="single-classes-inner-content">
-                            <h3 class="text-uppercase mb-30">Girls Stregnth</h3>
+                            <h3 class="text-uppercase mb-30">Engine</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu porta nisl. Donec consectetur ante.</p>
                         </div>
                     </div>
@@ -122,7 +122,7 @@
 
                         </div>
                         <div class="single-classes-inner-content">
-                            <h3 class="text-uppercase mb-30">zumba athletic</h3>
+                            <h3 class="text-uppercase mb-30">Sweat</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu porta nisl. Donec consectetur ante.</p>
                         </div>
                     </div>
@@ -137,7 +137,7 @@
 
                         </div>
                         <div class="single-classes-inner-content">
-                            <h3 class="text-uppercase mb-30">meditation</h3>
+                            <h3 class="text-uppercase mb-30">Bootcamp</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu porta nisl. Donec consectetur ante.</p>
                         </div>
                     </div>
@@ -152,7 +152,7 @@
 
                         </div>
                         <div class="single-classes-inner-content">
-                            <h3 class="text-uppercase mb-30">training with rope</h3>
+                            <h3 class="text-uppercase mb-30">kids</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu porta nisl. Donec consectetur ante.</p>
                         </div>
                     </div>
@@ -167,7 +167,7 @@
 
                         </div>
                         <div class="single-classes-inner-content">
-                            <h3 class="text-uppercase mb-30">punch boxing</h3>
+                            <h3 class="text-uppercase mb-30">Personal Training</h3>
                             <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Donec eu porta nisl. Donec consectetur ante.</p>
                         </div>
                     </div>
