--- a/trainers.html
+++ b/trainers.html
@@ -55,7 +55,7 @@
             <div class="row">
                 <div class="col-lg-12">
                     <div class="breadcum-inner-content">
-                        <h1 class="text-uppercase mb-50">our trainers</h1>
+                        <h1 class="text-uppercase mb-50">our Coaches</h1>
                         <nav aria-label="breadcrumb">
                             <ol class="breadcrumb">
                                 <li class="breadcrumb-item"><a href="index.html">Home</a></li>
@@ -142,7 +142,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                <!-- <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="single-team-expert">
                         <div class="team-expert-bg position-relative" data-background="assets/img/team/team-05.jpg">
                             <div class="team-expert-social-list">
@@ -158,8 +158,8 @@
                             <p class="text-uppercase">Yoga Trainer</p>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                </div> -->
+                <!-- <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="single-team-expert">
                         <div class="team-expert-bg position-relative" data-background="assets/img/team/team-06.jpg">
                             <div class="team-expert-social-list">
@@ -175,8 +175,8 @@
                             <p class="text-uppercase">Yoga Trainer</p>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                </div> -->
+                <!-- <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="single-team-expert">
                         <div class="team-expert-bg position-relative" data-background="assets/img/team/team-07.jpg">
                             <div class="team-expert-social-list">
@@ -192,8 +192,8 @@
                             <p class="text-uppercase">Yoga Trainer</p>
                         </div>
                     </div>
-                </div>
-                <div class="col-lg-3 col-md-6 col-sm-6">
+                </div> -->
+                <!-- <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="single-team-expert">
                         <div class="team-expert-bg position-relative" data-background="assets/img/team/team-08.jpg">
                             <div class="team-expert-social-list">
@@ -209,7 +209,7 @@
                             <p class="text-uppercase">Yoga Trainer</p>
                         </div>
                     </div>
-                </div>
+                </div> -->
             </div>
         </div>
     </section>
