--- a/index.html
+++ b/index.html
@@ -98,12 +98,10 @@
                     <div class="single-item-area-wrapper position-relative">
                         <div class="overlay-feature-content d-flex align-items-center" data-background="https://images.unsplash.com/photo-1517838277536-f5f99be501cd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
                             <div class="overlay-feature-inner-content">
-                                <p class="mb-30">A 60 minute class designed to challenge your strength, speed, and overall fitness. Variety of Barbell, accessory, gymnastic, and cardio movements all wrapped in one.</p>
-
+                                <p class="mb-30">Variety of Barbell, accessory, gymnastic, and cardio movements all wrapped in one. </p>
                                 <div class="site-btn feature-btn">
                                     <a href="class.html" class="primary-btn btn filled-btn">learn more</a>
                                 </div>
-
                             </div>
                         </div>
                         <div class="single-feature-inner-content text-center">
@@ -114,11 +112,12 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="single-item-area-wrapper position-relative">
                         <div class="overlay-feature-content d-flex align-items-center" data-background="https://images.unsplash.com/photo-1517838277536-f5f99be501cd?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1170&q=80">
                             <div class="overlay-feature-inner-content">
-                                <p class="mb-30">A 60 minute class designed to challenge your strength, speed, and overall fitness. Variety of Barbell, accessory, gymnastic, and cardio movements all wrapped in one.</p>
+                                <p class="mb-30"> Variety of Barbell, accessory, gymnastic, and cardio movements all wrapped in one.</p>
 
                                 <div class="site-btn feature-btn">
                                     <a href="class.html" class="primary-btn btn filled-btn">learn more</a>
@@ -155,6 +154,7 @@
                         </div>
                     </div>
                 </div>
+
                 <div class="col-lg-3 col-md-6 col-sm-6">
                     <div class="single-item-area-wrapper position-relative">
                         <div class="overlay-feature-content d-flex align-items-center" data-background="https://images.unsplash.com/photo-1519311965067-36d3e5f33d39?ixlib=rb-4.0.3&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1171&q=80">
@@ -1837,8 +1837,7 @@
                                 <div class="testimonial-qoute"><i class="fa fa-quote-right"></i> </div>
                             </div>
                             <div class="testimonial-inner-content">
-                                <p class="mb-40">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis tetur tellus in orci convallis aliquam. Ut nisl dui, ultricies sit amet iaculis accumsan, fringilla vitae augue. Donec vel porttitor urna, id gravida erat. Vivamus
-                                    egestas, metus vitae maximus vehicula, ante nisl ultrices eros, ultrices euismod ipsum lectus nec odio.</p>
+                                <p class="mb-40">Smallville Athletics is more then a gym, for me its been a place to improve my overall quality of life and truely make myself a better person. I've been going for over 3 years now and my flexibility, strength, and general quality of life has increased considerably.</p>
                                 <div class="testimonial-meta">
                                     <h3 class="text-uppercase">DAVID PK. WILLIAM <span>Yoga Trainer</span></h3>
                                 </div>
@@ -1996,10 +1995,11 @@
                             <h3 class="text-uppercase mb-20">Contact Info</h3>
                             <div class="contact-info">
                                 <ul>
-                                    <li><i class="fa fa-map"></i>2750 Fort Scott Kansas, USA</li>
+                                    <li><i class="fa fa-map"></i>1905 S. Judson, Fort Scott, KS, United States, Kansas</li>
                                     <li><i class="fa fa-envelope"></i><a href="mailto:admin@smallville-athletics.com">admin@smallviille-athleticscom</a></li>
-                                    <li><i class="fa fa-phone"></i><a href="tel:+324-9442-515">+324-9442-515</a></li>
+                                    <li><i class="fa fa-phone"></i><a href="tel:+16207199602">(620) 719-9602</a></li>
                                 </ul>
+                                
                             </div>
                             <div class="social-list footer-social-list">
                                 <a href="#" target="_blank"><i class="fa fa-facebook"></i></a>
@@ -2010,7 +2010,7 @@
                         </div>
                     </div>
                     <div class="col-lg-3 col-md-6  col-sm-6">
-                       
+                        <div class="mapouter"><div class="gmap_canvas"><iframe width="600" height="500" id="gmap_canvas" src="https://maps.google.com/maps?q=1905%20S.%20Judson,%20Fort%20Scott,%20KS,%20United%20States,%20Kansas&t=k&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" scrolling="no" marginheight="0" marginwidth="0"></iframe><a href="https://www.whatismyip-address.com/divi-discount/">divi discount</a><br><style>.mapouter{position:relative;text-align:right;height:500px;width:600px;}</style><a href="https://www.embedgooglemap.net">google map for websites</a><style>.gmap_canvas {overflow:hidden;background:none!important;height:500px;width:600px;}</style></div></div>
                     </div>
                 </div>
             </div>
